# cbr-content

./: README.md  pyproject.toml
.github/actions/expand-md-files-into-json/: action.yml
.github/actions/s3_publish-files/: action.yml
.github/workflows/: ci-pipeline__dev.yml  ci-pipeline__main.yml
cbr_content/: version
cbr_content/en/web-pages/: chat-with-llms.md  index.md
cbr_content/en/web-pages/demos/: index.md
cbr_content/en/web-pages/dev/: apis.md  github-repos.md  index.md  unit-test.md
cbr_content/en/web-pages/experiments/: chat-bot.md  index.md  single-llm-prompt.md
cbr_content/en/web-pages/how-to/: index.md  install-cbr-community.md
cbr_content/en/web-pages/news/: blog-posts.md  index.md
cbr_content/en/web-pages/personas/: cfo.md  cto.md  github-helper.md  index.md  portuguese-journalist.md  spelling-grammar-helper.md
cbr_content/en/web-pages/support/: apis.md  index.md  markdown.md
cbr_content/en/web-pages/tools/: index.md  simple-asm-and-binary-execution.md  simple-asm-execution.md  spelling-grammar-helper.md  tool__spelling-and-grammar.md
cbr_content/en/web-site/config/: side-menu.toml
cbr_content/pt/web-pages/: chat-with-llms.md
cbr_content/security-content/: 1-cybersecurity-in-the-boardroom.md  2-building-a-cybersecure-organisation.md  3-Incident-management.md  4-the-importance-of-digital-trust.md  _category_.json
cbr_content/utils/: Version.py
deploy/transform_content/: Cbr_Content__Transform_Into_Static.py  test_Cbr_Content__Transform_Into_Static.py
tests/unit/utils/: test_Version.py
(+72 files in other folders)
