[tool.poetry]
name        = "cbr_content"
version     = "v0.9.33"
description = "CBR - Content"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "MIT"
readme      = "README.md"
homepage    = "https://github.com/the-cyber-boardroom/cbr-content"
repository  = "https://github.com/the-cyber-boardroom/cbr-content"

[tool.poetry.dependencies]
python          = "^3.7"


[build-system]
requires        = ["poetry-core>=1.0.0"]
build-backend   = "poetry.core.masonry.api"
